--- a/ShadowFox-main/E-commerce.html
+++ b/ShadowFox-main/E-commerce.html
@@ -56,10 +56,14 @@
     <!-- Sidebar -->
     <div id="sidebar">
         <div class="sidebar-content">
-            <div class="sidebar-contentbox"><h2>Menu Box 1</h2></div>
-            <div class="sidebar-contentbox"><h2>Menu Box 1</h2></div>
-            <div class="sidebar-contentbox"><h2>Menu Box 1</h2></div>
-            <div class="sidebar-contentbox"><h2>Menu Box 1</h2></div>
+            <ul>
+                <li class="sidebar-contentbox"><b>Brand</b></li>
+                <li class="sidebar-contentbox"><b>Size</b></li>
+                <li class="sidebar-contentbox"><b>Color</b></li>
+                <li class="sidebar-contentbox"><b>Price</b></li>
+                <li class="sidebar-contentbox"><b>Size Type</b></li>
+                <li class="sidebar-contentbox"><b>Discount</b></li>
+            </ul>
         </div>
     </div>
     <script src="E-Commerce.js"></script>
